kubernetes/java-sdk-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: java-sdk-ingress
spec:
  rules:
  - host: spring-boot-javasdk
    http:
      paths:
      - path: /
        backend:
          serviceName: cdevents-java-sdk-service
          servicePort: 8080
